# wim

./: .gitignore  README.md  pyproject.toml  wim
lib/wim/: __init__.py  help.py
wim/: CLI.py  __main__.py  engine.py  filemap.py  misc.py
