[tool.poetry]
name = "wim"
version = "0.1.0"
license = "GPL-2.0-only"
description = "wic Image Manipulator"
authors = ["Trevor Woerner <twoerner@gmail.com>"]
readme = "README.md"
requires-python = ">=3.9"

[tool.poetry.scripts]
wim = "wim.CLI:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
